kubernetes/configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  labels:
    type: frontend
spec:
  containers:
    - name: simple-webapp-color
      image: kodekloud/webapp-color
---
apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  labels:
    type: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: test
        mountPath: "/config"
  volumes:
  - name: test
    configMap:
      name: cmenv
