kubernetes/mypod1.yaml
apiVersion: v1
kind: Pod
metadata:
   labels:
    type: frontend
  name: nginx-pod
spec:
  containers:
  - image: subodhdere77/success-story:v1
    name: nginx-container
