kubernetes/pod_cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  labels:
    type: frontend
spec:
  containers:
    - name: simple-webapp-color
      image: kodekloud/webapp-color
