kubernetes/scheduling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  tolerations:
    - key: subodh1
      value: dere1
      effect: NoSchedule
      operator: Equal
    - key: subodh
      value: dere
      effect: NoExecute
      operator: Equal
---
