kubernetes/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    type: frontend
spec:
  containers:
    - name: simple-webapp-color
      image: kodekloud/webapp-color
