kubernetes/security_context_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-pod1
spec:
  securityContext:
    runAsUser: 1000
    fsGroup: 1000
  containers:
  - name: security-context-cont
    image: supergiantkir/k8s-liveliness
