kubernetes/serviceAccount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
spec:
  containers:
  - image: nginx
    name: nginx
  serviceAccountName: sa1
