kubernetes/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  volumes:
  - name: host-volume
    persistentVolumeClaim:
      claimName: pvc-hostpath
  containers:
  - image: nginx
    name: nginx-container
    volumeMounts:
    - name: host-volume
      mountPath: /mydata
 
 # Note:
 # kubectl patch pv pv-hostpath -p '{"spec":{"claimRef": null}}' => change pv state from release to available
