kubernetes/volume_emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app1
  labels:
    type: frontend
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: test
        mountPath: "/config"
  volumes:
  - name: test
    emptyDir: {}
