kubernetes/myClusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myclusterip
  labels:
    type: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    type: frontend
