kubernetes/service.yaml
#NodePort
apiVersion: v1
kind: Service
metadata:
  name: mynpservice
  labels:
    type: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30008
  selector:
    type: frontend
---
#ClusterIp
apiVersion: v1
kind: Service
metadata:
  name: myclusterip
  labels:
    type: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    type: frontend
